---VBA-rr v24---

---VBA-rr v23 released October 28th 2010, r270--
09-27-2010 aquanull - Really finally fixed accelerator keys.
09-27-2010 aquanull - Fixed several screen redraw problems.
09-26-2010 aquanull - Added "Enable Background Input" option.
09-26-2010 aquanull - Added "Mute When Inactive" option.
09-12-2010 aquanull - Added "Always On Top" option.
09-12-2010 aquanull - Fixed the random error in application start up.
09-12-2010 aquanull - Fixed the error raised when the user canceled selecting from an archive after dragging & dropping a certain types of files onto the main window.
02-10-2010 aquanull - Finally fixed accelerator keys.
02-09-2010 aquanull - A more organized hot-key configuration dialog.
02-05-2010 nitsuja - fix input disable bug from r153 and throttler Sleep(1.6 years) bug, which were making vba impossible to use at least half of the time
01-15-2010 aquanull - Fixed torn graphics with good old Direct Draw with VSync enabled.
11-23-2009 aquanull - Fixed crash when playing a movie from power-on with a ROM selected from a multi-
file archive.
11-22-2009 aquanull - Hopefully fixed multi-byte character set support.
11-19-2009 aquanull - Fixed Escape shortcut key.
11-12-2009 gochaism - Lua: fixed joypad.set, it works fine even though the script has no frame-advance
loop.
11-12-2009 gochaism - Lua: changed joypad.set, it no longer adds input if the field value means false.

VBA-rr V22 released November 8, 2009 - SVN 182
??-??-???? ???????? - (missing log)

---VBA-rr V21+(interim)---
09-04-2009 aquanull - Added Pixelate 3x and Pixelate 4x filters for fun.
08-18-2009 aquanull - Fixed GDI/D3D/OpenGL display with 3x filters.
08-18-2009 aquanull - Added Simple 3x and Simple 4x filters (unoptimized).
08-05-2009 aquanull - Fixed a bug that certain accelerator keys would not be enabled correctly.
08-05-2009 aquanull - Fixed an assertion failure in the old cheat search dialog.